--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "main": "index.js",
   "author": "Darlan <Darlan.silvadacruz@gmail.com>",
   "license": "MIT",
-  "husky":{
-    "hooks":{
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "prepare-commit-msg": "exec < /dev/tty &&  cz --hook || true"
     }
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "commitizen": "^4.2.3",
+    "cz-conventional-changelog": "3.3.0",
     "husky": "^4.3.8"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
