--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "path-parse": "^1.0.7"
   }
 }
